--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="EN">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Musiverse</title>
-  <link href="http://fonts.googleapis.com/css?family=Raleway:200,300" rel="stylesheet" type="text/css" />
-  <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+  <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:200,300"/>
+  <link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
 </head>
 
 <body>
@@ -19,7 +19,6 @@
   <script type="text/javascript" src="js/threeJS/GPUParticleSystem.js"></script>
   <script type="text/javascript" src="js/threeJS/libs/stats.min.js"></script>
   <script type="text/javascript" src="js/dat.gui.min.js"></script>
-  <script type="text/javascript" src="js/visualizer.js"></script>
   <script type="text/javascript" src="js/audio.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
