--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <script type="text/javascript" src="lib/Detector.js"></script>
   <script type="text/javascript" src="lib/GPUParticleSystem.js"></script>
   <script type="text/javascript" src="lib/libs/stats.min.js"></script>
+  <script type="text/javascript" src="lib/p5.min.js"></script>
+  <script type="text/javascript" src="lib/p5.sound.min.js"></script>
   <!-- <script type="text/javascript" src="lib/dat.gui.min.js"></script> -->
-  <script type="text/javascript" src="src/audio.js"></script>
   <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
