Add lerp between bg color and option for major and minor keys.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+  <div id="key">
+		<button id="major" onclick="toMajor()" ontouchstart="toMajor()">Major</button>
+		<button id="minor" onclick="toMinor()" ontouchstart="toMinor()">Minor</button>
+	</div>
   <div id="container"></div>
   <!-- JavaScript -->
   <!--build:js js/app.min.js -->
