Add minor notes.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="Effulgence">
   <meta name="description" content="Musiverse is an audio reactive musical toy made by Prayash Thapa (effulgence.io).">
   <meta property="og:description" content="Musiverse is an audio reactive musical toy made by Prayash Thapa (effulgence.io).">
+  <meta property="og:url" content="http://effulgence.io" />
+  <link rel="icon" type="image/png" href="favicon.ico">
 
   <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:200,300"/>
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
