--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
   <!-- Analytics -->
   <script>
-    // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    // })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    //
-    // ga('create', 'UA-59088313-1', 'auto');
-    // ga('send', {
-    //   hitType: 'pageview',
-    //   page: location.pathname
-    // });
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-59088313-1', 'auto');
+    ga('send', {
+      hitType: 'pageview',
+      page: location.pathname
+    });
   </script>
 </html>
